# Bocek

./: .env  .gitignore  Pipfile  README.md  anonse.py  bot.py  example.env  pyproject.toml  scrape.py  test.py  tts.py  update_bocek.sh
cogs/: anonse.py  joke.py  lol_counter.py  minecraft.py  random_event.py  rhyme.py  rito.py  slang.py  tts.py
core/: session.py
extras/: example_googlekey.json  googlekey.json
glossary/: random_join.json  random_join.txt  rito.json  talk.json
mp3/: README.md
plugins/: anonse.py  common.py  glossary.py  joke.py  log.py  lol_counter.py  minecraft.py  random_event.py  rhyme.py  rito.py  scrape.py  slang.py  tts.py
tools/: convert_to_glossary.py  test.py
utils/: common.py  glossary.py  log.py  session.py
