[project]
name = "bocek"
version = "0.1.0"
description = "Discord bot with some really dumb features."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "discord-py[voice]>=2.4.0",
    "google-api-core==2.9.0",
    "google-api-python-client>=2.154.0",
    "google-cloud-texttospeech>=2.12.3",
    "google-cloud>=0.34.0",
    "gtts>=2.5.4",
    "python-dotenv>=1.0.1",
    "tabulate>=0.9.0",
    "unidecode>=1.3.8",
    "deepdiff>=8.0.1",
    "pynacl>=1.5.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.62.3",
    "aiohttp>=3.11.7",
    "aiohttp-retry>=2.9.1",
    "async-property>=0.2.2",
    "mutagen>=1.47.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
extend-select = ["I"]
select = ["E4", "E7", "E9", "F", "B"]